syntax = "proto3";
package gsync.player_api;

option java_multiple_files = true;
option java_package        = "net.averak.gsync.schema.protobuf.player_api";

import "resource/friend.proto";

service Friend {
  rpc ListV1(FriendListV1.Request) returns (FriendListV1.Response);
  rpc SendRequestV1(FriendSendRequestV1.Request) returns (FriendSendRequestV1.Response);
}

message FriendListV1 {
  message Request {}
  message Response {
    repeated resource.friend.Friend friends                         = 1;
    repeated resource.friend.FriendRequest sent_friend_requests     = 2;
    repeated resource.friend.FriendRequest received_friend_requests = 3;
  }
}

message FriendSendRequestV1 {
  message Request {
    string player_id = 1;
  }
  message Response {}
}
